# rag_proj

./: .gitignore  README.md  pyproject.toml  requirements.txt
evaluation/: analysis.md  questions.json  results.csv
notebook /: pdf_loader.ipynb
